--- a/style.css
+++ b/style.css
@@ -17,4 +17,5 @@ div {
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
   /* Your code here! */
+  color:blue;
 }
