--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ div {
   margin:auto;
   font-family:"Helvetica Nue";
   background:white;
+  padding:30px;
 }
 
 /* ID selector to select the element with id 'main-header' */
