--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
   /* Your code here! */
+  width:70px;
   margin:auto;
   font-family:"Helvetica Nue";
   background:white;
